# porkbun-dns-mcp

./: .gitignore  .lycheecache  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RULES.md  mypy.ini  pyproject.toml
porkbun_dns_mcp/: __init__.py  __main__.py  cli.py  cli.py.backup.json  client.py  client.py.backup.json  config.py  models.py  server.py
porkbun_dns_mcp/tools/: __init__.py  dns_tools.py
settings/: porkbun-dns.yaml
tests/: __init__.py  test_schema_validation.py
