[project]
name = "porkbun-dns-mcp"
version = "0.1.1"
description = "MCP server for Porkbun DNS management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "mcp-common>=0.4.8",
    "oneiric>=0.3.6",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.scripts]
porkbun-dns-mcp = "porkbun_dns_mcp.cli:main"

[tool.porkbun-dns-mcp]
http_port = 3042
http_host = "127.0.0.1"
enable_http_transport = false

[dependency-groups]
dev = [
    "crackerjack>=0.50.1",
    "session-buddy>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "C4"]
extend-select = ["I"]

[tool.pyright]
include = ["porkbun_dns_mcp"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=porkbun_dns_mcp --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
    "network: Tests requiring network access"
]

[tool.coverage.run]
source = ["porkbun_dns_mcp"]
omit = ["*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.bandit]
exclude_dirs = ["/tests"]
skips = ["B101"]
